--- a/index.html
+++ b/index.html
@@ -4,82 +4,65 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>horiSEON</title>
 </head>
 
 <body>
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <h1>Hori<span id="seo">seo</span>n</h1>
+          <div>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization </a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management </a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing </a></li>
             </ul>
-        </nav>
+          </div> 
     </header>
 
     <section class="hero"></section>
-    <div class="content">
-        <div id= "search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="the process used to optimise a website's technical configuration" class="float-left" />
+    <article class="content">
+        <article id= "search-engine-optimization" id= "search-engine-optimization"> 
+           <img src="./assets/images/search-engine-optimization.jpg" alt="the process used to optimise a website's technical configuration" class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
+        </article>
+
+        <article id="online-reputation-management" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="A man looking at business web engagement"class="float-right" />
             <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
+        </article>
+
+        <nav id="social-media-marketing" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="A draft of social media platforms" class="float-left" />
             <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
+        </article>
+    </section>
+
+    <article class="benefits">
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt = "Lead Generation concept line icon" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-    </div>
-        <div class="benefit-brand">
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
+       </article>
+            <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="A brand awareness icon that refers to the level of familiarity consumers have with a particular brand"/>
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
+        </article>
+            <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Estimation and Budgeting icon"/>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-   
-    </div>
-    <div class="footer">
+            <p> As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page. </p>
+            </article>
+    </article>
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
